<resources>

    <string name="app_name">Plants in Space</string>
    <string name="startButton">Start</string>
    <string name="earthOrSpace">Would you like to grow your plant on Earth or in Space?</string>
    <string name="Earth">Earth</string>
    <string name="Space">Space</string>
    <string name="lightOrDark">Will your plant grow in sunlight or darkness?</string>
    <string name="sunlight">Sunlight</string>
    <string name="darkness">Darkness</string>
    <string name="growingPlant">Please wait while your plant grows&#8230;</string>
    <string name="errorPlant">Whoops, looks like that was a bad seed.</string>
    <string name="tryAgain">Try Again</string>
    <string name="exit">Exit</string>
    <string name="bigPlant">Whoa! Look at that huge plant! Your plants height is 8 inches!</string>
    <string name="medLargePlant">That\'s a large plant! Your plants height is 6 inches.</string>
    <string name="regPlant">That\'s a pretty normal sized plant. Your plants height is 4 inches.</string>
    <string name="smallPlant">That\'s a small plant. Your plants height is 2 inches.</string>
    <string name="contentDescProgressBar">Progress Bar</string>
    <string name="plant">Plant</string>
    <string name="results">Results: </string>

</resources>
