<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/outerspace" >

    <ImageView
        android:id="@+id/earth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/earth" />

    <TextView
        android:id="@+id/earthOrSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/earthOrSpace"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
         />

    <Button
        android:id="@+id/earthButton"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:text="@string/Earth"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/spaceButton"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:text="@string/Space"
        android:textStyle="bold"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="25sp" />

</RelativeLayout>
